# rawspeed-clang-tidy-module

./: .gitignore  CMakeLists.txt  RawSpeedClangTidyModuleConfig.cmake.in  clang-tidy.in
.ci/: obs-workflows.yml
debian/: changelog  control  copyright  rawspeed-clang-tidy-module.install  rules
src/: CMakeLists.txt  HelloWorldCheck.cpp  HelloWorldCheck.h  NoStdOptionalCheck.cpp  NoStdOptionalCheck.h  RawSpeedTidyModule.cpp  StdArrayNoOperatorAtCheck.cpp  StdArrayNoOperatorAtCheck.h  clangTidyRawSpeedModuleConfig.cmake.in
test/: CMakeLists.txt  hello-world.cpp  lit.cfg.py  no-std-optional.cpp  std-array-no-operator-at.cpp
